# flow-xray

./: .gitignore  CHANGELOG.md  LICENSE  README.md  graph_debug.py  gtype.py  pyproject.toml
docs/: debug-python-agents.md  faq.md  flow-xray-vs-langsmith.md  langgraph.md
examples/: demo_graph.py  intro.ipynb  real_agent.py
flow_xray/: __init__.py  __main__.py  cli.py  debugger.py  export_dot.py  export_html.py  ir.py  trace.py  value.py  viewer.py
flow_xray/static/: viewer.html
tests/: conftest.py  test_cli.py  test_debugger.py  test_dot.py  test_html.py  test_ir.py  test_trace.py  test_value.py
